--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
+    <script defer src="https://cdn.tailwindcss.com"></script>
+    <title>InEdible</title>
 </head>
 <body>
-    <div class="container">
-        <div class="intro">
-            I am the homepage.
+    <div class="hero min-h-screen bg-base-200">
+        <div class="hero-content text-center">
+          <div class="max-w-md">
+            <h1 class="text-5xl font-bold">Welcome to InEdible</h1>
+            <p class="py-6">A fullstack web application designed to help users steer clear of any foods that may trigger their food allergies or intolerances. </p>
+            <button class="btn btn-primary"><a href="./login">Login</a></button>
+            <button class="btn btn-primary"><a href="./signup">Sign Up</a></button>
+          </div>
         </div>
-    </div>
+      </div>
 </body>
 </html>
