--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script defer src="https://cdn.tailwindcss.com"></script>
-    <title>Login</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <div class="hero min-h-screen bg-base-200">
         <div class="hero-content flex-col w-6/12">
           <div class="text-center lg:text-left">
-            <h1 class="text-5xl font-bold">Login</h1>
+            <h1 class="text-5xl font-bold">Sign Up</h1>
           </div>
           <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
             <div class="card-body">
@@ -27,13 +27,18 @@
                   <span class="label-text">Password</span>
                 </label>
                 <input type="text" placeholder="password" class="input input-bordered" />
+              </div>
+              <div class="form-control">
                 <label class="label">
-                  <a href="#" class="label-text-alt link link-hover">Forgot password? (coming soon)</a> 
-                  <a href="./signup" class="label-text-alt link link-hover">Sign up</a>
+                  <span class="label-text">Confirm Password</span>
+                </label>
+                <input type="text" placeholder="confirm password" class="input input-bordered" />
+                <label class="label">
+                  <a href="./login" class="label-text-alt link link-hover">Already have an account? Login.</a> 
                 </label>
               </div>
               <div class="form-control mt-6">
-                <button class="btn btn-primary">Login</button>
+                <button class="btn btn-primary">Sign Up!</button>
               </div>
             </div>
           </div>
