--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,23 @@
 
     <title>Document</title>
 </head>
+
 <body>
-    <%- body  %>
+    <div class="navbar bg-base-100">
+        <div class="flex-none">
+            <button class="btn btn-square btn-ghost">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                    class="inline-block w-5 h-5 stroke-current">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
+                </svg>
+            </button>
+        </div>
+        <div class="flex-1">
+            <a href="/" class="btn btn-ghost normal-case text-xl">InEdible</a>
+        </div>
+    </div>
+    <%- body %>
 </body>
+
 </html>
