--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,48 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script defer src="https://cdn.tailwindcss.com"></script>
-    <title>Sign Up</title>
+    <title>Login</title>
 </head>
+
 <body>
     <div class="hero min-h-screen bg-base-200">
         <div class="hero-content flex-col w-6/12">
-          <div class="text-center lg:text-left">
-            <h1 class="text-5xl font-bold">Sign Up</h1>
-          </div>
-          <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-            <div class="card-body">
-              <div class="form-control">
-                <label class="label">
-                  <span class="label-text">Username</span>
-                </label>
-                <input type="text" placeholder="username" class="input input-bordered" />
-              </div>
-              <div class="form-control">
-                <label class="label">
-                  <span class="label-text">Password</span>
-                </label>
-                <input type="text" placeholder="password" class="input input-bordered" />
-              </div>
-              <div class="form-control">
-                <label class="label">
-                  <span class="label-text">Confirm Password</span>
-                </label>
-                <input type="text" placeholder="confirm password" class="input input-bordered" />
-                <label class="label">
-                  <a href="./login" class="label-text-alt link link-hover">Already have an account? Login.</a> 
-                </label>
-              </div>
-              <div class="form-control mt-6">
-                <button class="btn btn-primary">Sign Up!</button>
-              </div>
+            <div class="text-center lg:text-left">
+                <h1 class="text-5xl font-bold">Sign Up</h1>
             </div>
-          </div>
+            <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                <div class="card-body">
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Username</span>
+                        </label>
+                        <input type="text" placeholder="username" class="input input-bordered" />
+                    </div>
+                    <div class="form-control">
+                        <label class="label">
+                            <span class="label-text">Password</span>
+                        </label>
+                        <input type="text" placeholder="password" class="input input-bordered" />
+                        <label class="label">
+                            <span class="label-text">Confirm Password</span>
+                        </label>
+                        <input type="text" placeholder="confirm password" class="input input-bordered" />
+                        <label class="label">
+                            <a href="./login" class="label-text-alt link link-hover">Already a member? Login.</a>
+                        </label>
+                    </div>
+                    <div class="form-control mt-6">
+                        <button class="btn btn-primary">Sign Up</button>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+    </div>
 </body>
+
 </html>
