--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -10,7 +10,6 @@
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/styles.css">
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>InEdible</title>
 </head>
 
@@ -19,7 +18,7 @@
         <div class="container">
             <%- body %>
         </div>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
 
 </body>
