--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,3 +2,26 @@
 <h3>
     Welcome <%= name %>!
 </h3>
+<% if foods {%>
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Ingredients</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% each foods {%>
+                <tr>
+                    <td><a href="/foods/<%=_id%>"></a>
+                        <%= name %>
+                    </td>
+                </tr>
+                <% } %>
+        </tbody>
+    </table>
+
+    <% } else {%>
+        <p>You have not created any foods. :( </p>
+        <% } %>
