--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -15,11 +15,12 @@
 
 <body>
     <%- include('./partials/_header.ejs') %>
-        <div class="container">
-            <%- body %>
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-        <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
+        <%- include('./partials/_addbtn.ejs') %>
+            <div class="container">
+                <%- body %>
+            </div>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+            <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
 
 </body>
 
