--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,37 +2,16 @@
 <h3>
     Welcome <%= name %>!
 </h3>
-<% if foods {%>
-    <table class="striped">
-        <thead>
-            <tr>
-                <th>Title</th>
-                <th>Ingredients</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
+<div class="container">
+    <div class="row justify-content-center mt-5">
+        <ul class="row list-unstyled">
             <% for(let i=0; i < foods.length; i++) {%>
-                <tr>
-                    <td>
-                        <a href="/foods/<%= foods[i]_id%>"></a>
-                        <%= name %>
-                    </td>
-                    <td>
-                        <img class="img-fluid" src="<%= foods[i].image %> ">
-                    </td>
-                    <td>
-                        <h1>Ingredients</h1>
-                        <span>
-                            <%= foods[i].ingredients %>
-                        </span>
-                    </td>
-                    <td></td>
-                </tr>
+                <li class="col-6 justify-content-between mt-5">
+                    <a href="/foods/<%= foods[i]._id%>">
+                        <img class="img-fluid" src="<%= foods[i].image%>">
+                    </a>
+                </li>
                 <% } %>
-        </tbody>
-    </table>
-
-    <% } else {%>
-        <p>You have not created any foods. :( </p>
-        <% } %>
+        </ul>
+    </div>
+</div>
