--- a/views/foods/add.ejs
+++ b/views/foods/add.ejs
@@ -3,28 +3,38 @@
     <form action="/foods" method="POST" class="col s12">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="name" name="name">
-                <label for="name">Name</label>
+                <input type="text" id="name" name="foodName">
+                <label for="foodName">Name</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field">
-                <input type="textarea" id="ingredients" name="ingredients">
+                <select id="foodCategory" name="foodCategory">
+                    <option value="dairy" selected>Dairy</option>
+                    <option value="gluten">Gluten</option>
+                    <option value="Nut">Nut</option>
+                </select>
+                <label for="foodCategory">Category</label>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="input-field">
+                <textarea id="ingredients" class="materialize-textarea" name="ingredients"></textarea>
                 <label for="ingredients">Ingredients</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field">
-                <h5>Add image:</h5>
                 <button>Add Image</button>
             </div>
         </div>
 
         <div class="row">
             <input type="submit" value="Save" class="btn">
-            <a href="/dashboard" class="btn orange">Cancel</a>
+            <a href="/dashboard" class="btn red">Cancel</a>
         </div>
     </form>
 </div>
