--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -21,6 +21,8 @@
             </div>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             <script>M.Sidenav.init(document.querySelector('.sidenav'))</script>
+            <script>M.FormSelect.init(document.querySelector('#foodCategory'))</script>
+
 
 </body>
 
