Change label to header tag temporarily

--- a/views/foods/add.ejs
+++ b/views/foods/add.ejs
@@ -21,8 +21,8 @@
 
         <div class="row">
             <div class="input-field">
+                <h6>Ingredients</h6>
                 <textarea id="ingredients" class="materialize-textarea" name="ingredients"></textarea>
-                <label for="ingredients">Ingredients</label>
             </div>
         </div>
 
