--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,16 +2,46 @@
 <h3>
     Welcome <%= name %>!
 </h3>
-<div class="container">
-    <div class="row justify-content-center mt-5">
-        <ul class="row list-unstyled">
-            <% for(let i=0; i < foods.length; i++) {%>
-                <li class="col-6 justify-content-between mt-5">
-                    <a href="/foods/<%= foods[i]._id%>">
-                        <img class="img-fluid" src="<%= foods[i].image%>">
-                    </a>
-                </li>
-                <% } %>
-        </ul>
-    </div>
-</div>
+<p>Added Food List</p>
+
+<% if (foods) {%>
+    <table class="striped">
+        <thead>
+            <tr>
+                <th>Food</th>
+                <th>Category</th>
+                <th>Ingredients</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            <% foods.forEach(food=> { %>
+                <tr>
+                    <td><a href="/foods/<%=food._id%>">
+                            <%= food.foodName %>
+                        </a></td>
+                    <td>
+                        <!-- formatDate createdAt 'MMMM Do YYYY, h:mm:ss a' %> -->
+                    </td>
+                    <td><span class="dash-status">
+                            <%= food.foodCategory %>
+                        </span></td>
+                    <td>
+                        <a href="/foods/edit/<%= food._id %> " class="btn btn-float">
+                            <i class="fas fa-edit"></i>
+                        </a>
+
+                        <form action="/foods/<%= food._id %>" method="POST" id="delete-form">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <button type="submit" class="btn red">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </form>
+                    </td>
+                </tr>
+                <% }) %>
+        </tbody>
+    </table>
+    <% } else {%>
+        <p>You have not created any stories</p>
+        <% } %>
