Incorp helper functions to make ingredients cleaner

--- a/views/foods/add.ejs
+++ b/views/foods/add.ejs
@@ -11,8 +11,8 @@
         <div class="row">
             <div class="input-field">
                 <select id="foodCategory" name="foodCategory">
-                    <option value="dairy" selected>Dairy</option>
-                    <option value="gluten">Gluten</option>
+                    <option value="Dairy" selected>Dairy</option>
+                    <option value="Gluten">Gluten</option>
                     <option value="Nut">Nut</option>
                 </select>
                 <label for="foodCategory">Category</label>
