--- a/views/foods/index.ejs
+++ b/views/foods/index.ejs
@@ -4,7 +4,7 @@
         <div class="col s12 m4">
             <div class="card">
                 <div class="card-image">
-                    <!-- todo: editicon -->
+                    <%- editIcon(food.user, currUser, food._id ) %>
                 </div>
                 <div class="card-content center-align">
                     <h5>
