--- a/views/foods/edit.ejs
+++ b/views/foods/edit.ejs
@@ -1,6 +1,6 @@
 <h3>Edit Food</h3>
 <div class="row">
-    <form action="/foods" method="POST" class="col s12">
+    <form action="/foods/<%= food._id %> " method="POST" class="col s12">
         <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
