Add search to nav bar

--- a/views/layout/partials/_header.ejs
+++ b/views/layout/partials/_header.ejs
@@ -5,6 +5,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="/foods">General Food</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/foods/api">Search</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
