Add new wording to navbar

--- a/views/layout/partials/_header.ejs
+++ b/views/layout/partials/_header.ejs
@@ -3,9 +3,9 @@
         <a href="#!" class="brand-logo center"><i class="fa-solid fa-skull-crossbones"></i>InEdible</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i class="fas fa-bars"></i></a>
         <ul class="sidenav" id="mobile-demo">
-            <li><a href="/foods">General Food</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/foods/api">Search</a></li>
+            <li><a href="/foods">Community Food</a></li>
+            <li><a href="/foods/search">Search Products</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
