--- a/views/layout/partials/_header.ejs
+++ b/views/layout/partials/_header.ejs
@@ -5,7 +5,7 @@
         <ul class="sidenav" id="mobile-demo">
             <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="/foods">Community Food</a></li>
-            <li><a href="/foods/search">Search Products</a></li>
+            <li><a href="/products/search">Search Products</a></li>
             <li><a href="/auth/logout">Logout</a></li>
         </ul>
     </div>
