--- a/views/products/search.ejs
+++ b/views/products/search.ejs
@@ -2,7 +2,7 @@
 <form action="/products/results" method="POST">
     <div class="row">
         <label for="productSearch">Search</label>
-        <input type="text" name="productSearch" id="productSearch">
+        <input type="text" name="productSearch" id="productSearch" required>
         <input type="submit" class="btn">
     </div>
 </form>
