--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
@@ -55,4 +55,4 @@ code {
     font-size: 14px;
     font-weight: bold;
     font-family: "Roboto", arial, sans-serif;
-}
+} */
