--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,12 @@ form.login {
     border: 3px solid var(--primary);
     font-size: 1.5rem;
 }
+
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 400px;
+    font-size: large;
+}
