--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,7 @@ form.login {
 
 .card {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 300px;
