--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,32 @@ form.login {
     height: 400px;
     font-size: large;
 }
+
+.card-image {
+    position: relative;
+    overflow: hidden;
+    padding: 20px;
+}
+
+.card-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+}
+
+.card-title {
+    max-height: 100px;
+    font-size: 1.2rem !important;
+    line-height: 1.2rem !important;
+}
+
+.card-action {
+    text-align: center;
+    padding-top: 5px !important;
+    margin-top: 20px;
+}
