--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,11 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.ult-container {
+    height: 100%;
+    min-height: 100vh;
+}
+
 .container {
     width: 80%;
     min-width: 601px;
@@ -66,11 +71,15 @@ form.login {
     margin-top: 20px;
 }
 
-.footer div {
+.footer {
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    width: 100%;
     height: 75px;
     margin-top: 20px;
+}
+.footer div {
+    text-align: center;
 }
