--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,6 +71,18 @@ form.login {
     margin-top: 20px;
 }
 
+.info-card {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    overflow: auto;
+}
+
 .footer {
     display: flex;
     justify-content: center;
