--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -79,6 +79,8 @@ form.login {
     z-index: 9999;
     width: 500px;
     height: 500px;
+    border: 5px black solid;
+    border-radius: 5%;
     background-color: white;
     overflow: auto;
 }
