Add styling to mult components

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    min-height: 100vh;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
@@ -9,9 +10,22 @@ body {
 
 .ult-container {
     height: 100%;
-    min-height: 100vh;
 }
 
+.nav {
+    height: 150px;
+    padding-top: 60px;
+    background-color: white;
+}
+.nav-logo a {
+    color: black;
+    font-size: 3rem;
+    font-weight: 800;
+}
+
+.nav-logo i {
+    font-size: 2.5rem;
+}
 .container {
     width: 80%;
     min-width: 601px;
@@ -72,6 +86,8 @@ form.login {
 }
 
 .info-card {
+    display: flex;
+    flex-direction: column;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -83,17 +99,32 @@ form.login {
     border-radius: 5%;
     background-color: white;
     overflow: auto;
+    padding: 10px;
 }
-
-.footer {
+.info-img-div {
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: white;
-    width: 100%;
-    height: 75px;
     margin-top: 20px;
 }
-.footer div {
+
+.info-desc {
+    line-height: 1.2rem;
+}
+
+.info-btn-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.info-btn {
+    width: 80px;
+}
+.info-btn:first-child {
+    margin-right: 10px;
+}
+footer {
+    width: 100%;
+    height: 50px;
     text-align: center;
 }
