--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,7 +9,8 @@ body {
 }
 
 .ult-container {
-    height: 100vh;
+    min-height: 100vh;
+    height: 100%;
 }
 
 .nav {
@@ -59,6 +60,10 @@ form.login {
 
 .searchbar input:first-child:active {
     border: 2px solid darkgreen !important;
+}
+
+.container.search-results {
+    width: 100%;
 }
 
 .card {
@@ -165,5 +170,6 @@ form.login {
 footer {
     width: 100%;
     height: 50px;
+
     text-align: center;
 }
